--- a/public/css/app.css
+++ b/public/css/app.css
@@ -988,6 +988,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity, 1));
+}
 .opacity-25 {
   opacity: 0.25;
 }
